--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,7 +73,9 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
+    - name: Make terraform file
+      run: echo "" > main.tf
+      
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
