--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: pip-install
-        if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           pip install -r requirements.txt -t . --no-user
           ls -l
