--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,16 +34,24 @@ jobs:
 
       - name: terraform-backend
         run: |
-          tf.sh \
-          --bucket=${{ secrets.AWS_ACCOUNT_ID }} \
-          --region=${{ secrets.AWS_DEFAULT_REGION }}
-          ls -l
-          cat tf.sh
+          cat <<EOF >$TERRAFORM_BACKEND.tf
+          terraform {
+            backend "s3" {
+              bucket = "${{ secrets.AWS_ACCOUNT_ID }}"
+              key    = "AnimalCrossing/ApiGatewayLambdaLayer/terraform.tfstate"
+              region = "${{ secrets.AWS_DEFAULT_REGION }}"
+            }
+          }
+          EOF
+
+      - name: terraform-backend-permission
+        run: |
+          chmod +x ./$TERRAFORM_BACKEND.tf
 
       - name: terraform-init
         run: |
           terraform init \
-          -backend=false -input=false -no-color
+          -backend=false -input=false -reconfigure -no-color
 
       - name: terraform-apply
         run: |
