--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,8 +29,7 @@ jobs:
 
       - name: pip-install
         run: |
-          pip install \
-          -r requirements.txt -t . --no-user
+          pip install -r requirements.txt -t . --no-user
 
       - name: terraform-backend
         run: |
@@ -50,10 +49,10 @@ jobs:
 
       - name: terraform-init
         run: |
-          terraform init \
-          -backend=false -input=false -reconfigure -no-color
+          terraform init -backend=false -input=false -reconfigure -no-color
 
       - name: terraform-apply
         run: |
-          terraform apply \
-          -auto-approve -input=false -no-color
+          terraform apply -compact-warnings -detailed-exitcode -input=false -no-color \
+          -var account="${{ secrets.AWS_ACCOUNT_ID }}" \
+          -var region="${{ secrets.AWS_DEFAULT_REGION }}"
