--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,11 +26,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: pip-upgrade
         run: |
           python -m pip install --upgrade pip
+
+      - name: pip-install
+        run: |
           pip install pylint
 
-      - name: Analysing the code with pylint
+      - name: pylint
         run: |
           pylint $(git ls-files '*.py')
