--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,6 +16,9 @@ jobs:
       run:
         shell: bash
 
+    env:
+      TERRAFORM_BACKEND: terraform-backend.sh
+
     steps:
       - uses: actions/checkout@v3
 
@@ -24,12 +27,34 @@ jobs:
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+        run: |
+          cat <<EOF >$TERRAFORM_BACKEND.tf
+          terraform {
+            backend "s3" {
+              bucket = "${{ secrets.AWS_ACCOUNT_ID }}"
+              key    = "AnimalCrossing/ApiGatewayLambdaLayer/terraform.tfstate"
+              region = "${{ secrets.AWS_DEFAULT_REGION }}"
+            }
+          }
+          EOF
+
+      - name: terraform-backend-permission
+        run: |
+          chmod +x ./$TERRAFORM_BACKEND.tf
+
       - name: terraform-init
         run: |
           terraform init \
-          -backend=false -input=false -no-color
+          -input=false -reconfigure -no-color
 
       - name: terraform-fmt
         run: |
           terraform fmt \
           -check -no-color -recursive
+
+      - name: terraform-plan
+        run: |
+          terraform plan \
+          -compact-warnings -detailed-exitcode -input=false -no-color
+          -var account="${{ secrets.AWS_ACCOUNT_ID }}"
+          -var region="${{ secrets.AWS_DEFAULT_REGION }}"
