--- a/.github/workflows/autoflake.yml
+++ b/.github/workflows/autoflake.yml
@@ -3,26 +3,29 @@ name: autoflake
 on:
   push:
     branches:
-      - *
+      - "*"
     exclude:
       - main
   workflow_dispatch:
-
 
 jobs:
   autoflake:
     name: autoflake
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.8"]
+
     steps:
-      - name: install GitHub Actions@v3 actions/checkout@v3
+      - name: Install GitHub Actions@v3 actions/checkout@v3
         uses: actions/checkout@v3
 
-      - name: install Python@latest pip@latest
+      - name: Install Python@${{ matrix.python-version }} Pip@latest
         run: |
           python -m pip install --upgrade pip
 
-      - name: install Python@latest autoflake@latest 
+      - name: Install Python@${{ matrix.python-version }} Autoflake@latest 
         run: |
           pip install autoflake \
           --force-reinstall \
@@ -31,20 +34,22 @@ jobs:
           --upgrade \
           --verbose
 
-      - name: run autoflake@latest
+      - name: Autoflake@latest Python@${{ matrix.python-version }} 
         run: |
           autoflake \
           --in-place \
           --remove-unused-variables \
-          --remove-unused-imports $(git diff --name-only HEAD^ HEAD | grep .py)
+          --remove-unused-imports
 
-      - name: commit changes GitHub@latest
+      - name: GitHub@latest commit changes
         run: |
-          git config user.email "${{ github.event.head_commit.author.email }}"
-          git config user.name "${{ github.event.head_commit.author.name }}"
+          git config user.email \
+          "${{ github.event.head_commit.author.email }}"
+          git config user.name \
+          "${{ github.event.head_commit.author.name }}"
           git commit -am "Autoformat code on commit" || true
 
-      - name: push changes GitHub@latest
+      - name: GitHub@latest push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
