--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,16 +12,25 @@ jobs:
     name: deployment
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.8"]
+
     defaults:
       run:
         shell: bash
 
     steps:
-      - name: install GitHub Actions@v3 actions/checkout@v3
+      - name: Install GitHub Actions@v3 actions/checkout@v3
         uses: actions/checkout@v3
 
-      - name: install Terraform@v1 hashicorp/setup-terraform@v1
+      - name: Install Terraform@v1 hashicorp/setup-terraform@v1
         uses: hashicorp/setup-terraform@v1
       
-      - name: install Python Pip@latest
+      - name: Install Python@${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Python@${{ matrix.python-version }} Pip@latest
         run: python -m pip install --upgrade pip
