--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,19 +21,19 @@ jobs:
         python-version: ["3.8"]
 
     steps:
-      - name: install GitHub Actions@v3 actions/checkout@v3
+      - name: Install GitHub Actions@v3 actions/checkout@v3
         uses: actions/checkout@v3
 
-      - name: install Python@${{ matrix.python-version }}
+      - name: Install Python@${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: install Python@${{ matrix.python-version }} pip@latest
+      - name: Install Python@${{ matrix.python-version }} Pip@latest
         run: |
           python -m pip install --upgrade pip
 
-      - name: install Python@${{ matrix.python-version }} pylint@latest 
+      - name: Install Python@${{ matrix.python-version }} Pylint@latest 
         run: |
           pip install pylint \
           --force-reinstall \
@@ -42,6 +42,6 @@ jobs:
           --upgrade \
           --verbose
 
-      - name: run pylint@latest
+      - name: Pylint@latest Python@${{ matrix.python-version }} 
         run: |
           pylint $(git ls-files '*.py')
