--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,15 +17,15 @@ jobs:
         shell: bash
 
     steps:
-      - name: install GitHub Actions@v3 actions/checkout@v3
+      - name: Install GitHub Actions@v3 actions/checkout@v3
         uses: actions/checkout@v3
 
-      - name: install Terraform@v1 hashicorp/setup-terraform@v1
+      - name: Install Terraform@v1 hashicorp/setup-terraform@v1
         uses: hashicorp/setup-terraform@v1
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: run Terraform@v1 init
+      - name: Terraform initialize Terraform@v1
         run: |
           terraform init \
           -backend=false \
@@ -33,7 +33,7 @@ jobs:
           -no-color \
           -reconfigure
 
-      - name: run Terraform@v1 fmt
+      - name: Terraform format Terraform@v1
         run: |
           terraform fmt \
           -check \
