--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -6,6 +6,8 @@ on:
       - "*"
     exclude:
       - main
+    paths:
+      - "**/*.py"
 
 permissions:
   contents: write
@@ -58,8 +60,8 @@ jobs:
       - name: Run GitHub@latest commit
         run: |
           git commit -am "Autoformatting" || true
-      - name: Run GitHub@latest push @${{ github.event.head_commit.author.name }} ${{ github.ref }}
+      - name: Run GitHub@latest push @${{ github.event.head_commit.author.name }} ${{ github.ref }} ${{ github.branch }}
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.ref }}
+          branch: ${{ github.branch }}
