--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -60,8 +60,9 @@ jobs:
       - name: Run GitHub@latest commit
         run: |
           git commit -am "Autoformatting" || true
-      - name: Run GitHub@latest push @${{ github.event.head_commit.author.name }} ${{ github.ref }} ${{ github.branch }}
-        uses: ad-m/github-push-action@v0.6.0
+      - name: Run GitHub@latest push @${{ github.event.head_commit.author.name }} ${{ github.ref }}
+        uses: ad-m/github-push-action@master
         with:
+          branch: ${{ github.ref }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.branch }}
+          force_with_lease: true
