--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: black
+name: terraform
 
 on:
   push:
@@ -7,19 +7,18 @@ on:
     exclude:
       - main
     paths:
-      - "**/*.py"
+      - "**/*.tf"
 
 permissions:
   contents: write
 
 jobs:
-  black:
+  terraform:
     defaults:
       run:
         shell: bash
     env:
       APP: "AnimalCrossing"
-      PIP_TIMEOUT: 10
       RESOURCE: "ApiGateway"
       SERVICE: "LambdaLayer"
     environment: development
@@ -30,25 +29,16 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Actions/Python@v3
         uses: actions/setup-python@v3
-      - name: Install Python@latest/Pip@latest
+      - name: Install Terraform@latest
+        uses: hashicorp/setup-terraform@v1
+      - name: Run Terraform@latest initalize
         run: |
-          python -m pip install pip \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
-      - name: Install Python@latest/Black@latest
+          terraform init \
+          -backend=false -input=false -no-color -reconfigure
+      - name: Run Terraform@latest format
         run: |
-          pip install black \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
-      - name: Run Black@latest
-        run: |
-          black --no-color --verbose $(pwd)
+          terraform fmt \
+          -list=true -no-color -recursive -write=true
       - name: Run GitHub@latest config user.email
         run: |
           git config user.email \
