--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -59,11 +59,11 @@ jobs:
           "${{ github.event.head_commit.author.name }}"
       - name: Run GitHub@latest commit
         run: |
-          git commit -am "Autoformatting (${{ github.ref }}/${{ github.event.head_commit.author.name }})"
+          git commit -am "Autoformatting (${{ github.ref }})"
       - name: Run GitHub@latest status
         run: |
           git status
-      - name: Run GitHub@latest push @${{ github.event.head_commit.author.name }} ${{ github.ref }}
+      - name: Run GitHub@latest push ${{ github.ref }} ${{ github.event.head_commit.author.name }}
         uses: ad-m/github-push-action@master
         with:
           branch: ${{ github.ref }}
