--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,8 +2,6 @@ name: pylint
 
 on:
   pull_request:
-    branches:
-      - main
   workflow_dispatch:
 
 permissions:
@@ -11,29 +9,42 @@ permissions:
 
 jobs:
   pylint:
+    defaults:
+      run:
+        shell: bash
+    env:
+      APP: "AnimalCrossing"
+      PIP_TIMEOUT: 10
+      RESOURCE: "ApiGateway"
+      SERVICE: "LambdaLayer"
+    environment: development
     name: pylint
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: ["3.8"]
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Install Actions/Checkout@v3
+        uses: actions/checkout@v3
+      - name: Install Actions/Python@v3
         uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: pip-upgrade
+      - name: Install Python@latest/Pip@latest
         run: |
-          python -m pip install --upgrade pip
-
-      - name: pip-install
+          python -m pip install pip \
+          --no-color \
+          --no-input \
+          --timeout $PIP_TIMEOUT \
+          --upgrade \
+          --verbose
+      - name: Install Python@latest/Pylint@latest
         run: |
-          pip install pylint
-
-      - name: pylint
+          pip install pylint \
+          --no-color \
+          --no-input \
+          --timeout $PIP_TIMEOUT \
+          --upgrade \
+          --verbose
+      - name: Run Pylint@latest
         run: |
-          pylint $(git ls-files '*.py')
+          pylint \
+          --disable=C0114,C0103,W1203,W0611,W0703 \
+          --ignore=tests \
+          --max-line-length=120 \
+          **/*.py
