--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -33,23 +33,14 @@ jobs:
       - name: Install Python@latest/Pip@latest
         run: |
           python -m pip install pip \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Install Python@latest/Black@latest
         run: |
           pip install black \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Run Black@latest
         run: |
           black --no-color --verbose $(pwd)
-      - if: echo $(git status --porcelain | grep -q "M\|A\|D\|R\|C" && echo 0 || echo 1)
       - name: Run GitHub@latest config user.email
         run: |
           git config user.email \
@@ -58,13 +49,17 @@ jobs:
         run: |
           git config user.name \
           "${{ github.event.head_commit.author.name }}"
-      - name: Run GitHub@latest commit
-        run: |
-          git commit -am "Autoformatting (${{ github.ref }})"
       - name: Run GitHub@latest status
         run: |
           git status
+      - name: Run GitHub@latest status check
+        run: echo $(git status --porcelain | grep -q "M\|A\|D\|R\|C" && echo 0 || echo 1)
+      - name: Run GitHub@latest commit
+        if: success()
+        run: |
+          git commit -am "Autoformatting (${{ github.ref }})"
       - name: Run GitHub@latest push ${{ github.ref }} ${{ github.event.head_commit.author.name }}
+        if: success()
         uses: ad-m/github-push-action@master
         with:
           branch: ${{ github.ref }}
