--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,7 +39,6 @@ jobs:
         run: |
           terraform fmt \
           -list=true -no-color -recursive -write=true
-      - if: echo $(git status --porcelain | grep -q "M\|A\|D\|R\|C" && echo 0 || echo 1)
       - name: Run GitHub@latest config user.email
         run: |
           git config user.email \
@@ -48,13 +47,17 @@ jobs:
         run: |
           git config user.name \
           "${{ github.event.head_commit.author.name }}"
-      - name: Run GitHub@latest commit
-        run: |
-          git commit -am "Autoformatting (${{ github.ref }})"
       - name: Run GitHub@latest status
         run: |
           git status
+      - name: Run GitHub@latest status check
+        run: echo $(git status --porcelain | grep -q "M\|A\|D\|R\|C" && echo 0 || echo 1)
+      - name: Run GitHub@latest commit
+        if: success()
+        run: |
+          git commit -am "Autoformatting (${{ github.ref }})"
       - name: Run GitHub@latest push ${{ github.ref }} ${{ github.event.head_commit.author.name }}
+        if: success()
         uses: ad-m/github-push-action@master
         with:
           branch: ${{ github.ref }}
