--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,6 +2,8 @@ name: pylint
 
 on:
   pull_request:
+    paths:
+      - "**/*.py"
   workflow_dispatch:
 
 permissions:
@@ -28,19 +30,11 @@ jobs:
       - name: Install Python@latest/Pip@latest
         run: |
           python -m pip install pip \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Install Python@latest/Pylint@latest
         run: |
           pip install pylint \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Run Pylint@latest
         run: |
           pylint \
