--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -33,19 +33,11 @@ jobs:
       - name: Install Python@latest/Pip@latest
         run: |
           python -m pip install pip \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Install Python@latest/Black@latest
         run: |
           pip install black \
-          --no-color \
-          --no-input \
-          --timeout $PIP_TIMEOUT \
-          --upgrade \
-          --verbose
+          --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Run Black@latest
         run: |
           black --no-color --verbose $(pwd)
@@ -57,12 +49,12 @@ jobs:
         run: |
           git config user.name \
           "${{ github.event.head_commit.author.name }}"
+      - name: Run GitHub@latest status
+        run: |
+          git status --porcelain
       - name: Run GitHub@latest commit
         run: |
           git commit -am "Autoformatting (${{ github.ref }})"
-      - name: Run GitHub@latest status
-        run: |
-          git status
       - name: Run GitHub@latest push ${{ github.ref }} ${{ github.event.head_commit.author.name }}
         uses: ad-m/github-push-action@master
         with:
