--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,12 +47,12 @@ jobs:
         run: |
           git config user.name \
           "${{ github.event.head_commit.author.name }}"
+      - name: Run GitHub@latest status
+        run: |
+          git status --porcelain
       - name: Run GitHub@latest commit
         run: |
           git commit -am "Autoformatting (${{ github.ref }})"
-      - name: Run GitHub@latest status
-        run: |
-          git status
       - name: Run GitHub@latest push ${{ github.ref }} ${{ github.event.head_commit.author.name }}
         uses: ad-m/github-push-action@master
         with:
