--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,7 @@ jobs:
     env:
       APP: "AnimalCrossing"
       PIP_TIMEOUT: 10
-      RESOURCE: "ApiGateway"
-      SERVICE: "LambdaLayer"
+      REPOSITORY: "ApiGatewayLambdaLayer"
     environment: development
     name: pylint
     runs-on: ubuntu-latest
