--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -30,6 +30,11 @@ jobs:
         run: |
           python -m pip install pip \
           --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
+      - run: Pip@latest install ./model requirements.txt
+        working-directory: ./model
+        run: |
+          pip install -r requirements.txt -t . \
+          --no-color --no-input --no-user --timeout $PIP_TIMEOUT --upgrade --verbose
       - name: Install Terraform@latest
         uses: hashicorp/setup-terraform@v1
       - name: Create Terraform remote state file
