--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           python -m pip install pip \
           --no-color --no-input --timeout $PIP_TIMEOUT --upgrade --verbose
-      - run: Pip@latest install ./model requirements.txt
+      - name: Pip@latest install ./model requirements.txt
         working-directory: ./model
         run: |
           pip install -r requirements.txt -t . \
